FEAT: Add more image and make somes page more realistic

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <div class="top-bar-header">
       <div class="marquee">
         <span>
-          Cơ hội việc làm và định cư tại Đức - SADAKA HR đồng hành cùng bạn -
-          Hotline: 0931.495.639
+          SADAKA HR: Kiến tạo sự nghiệp toàn cầu - Vững bước định cư tương lai. Hotline: (+84) 90 990 8353
         </span>
       </div>
     </div>
@@ -84,10 +83,10 @@
 
       <section class="services-section">
         <div class="services-header">
-          <h2>HỆ SINH THÁI VIỆC LÀM & ĐỊNH CƯ ĐỨC</h2>
+          <h2>GIẢI PHÁP CUNG ỨNG NHÂN LỰC QUỐC TẾ</h2>
           <p>
-            Cung cấp giải pháp trọn gói từ tư vấn đơn hàng, kết nối đào tạo ngôn ngữ đến xử lý hồ sơ pháp lý, giúp người
-            lao động tiếp cận những công việc thu nhập cao tại CHLB Đức.
+            SADAKA HR là bệ phóng vững chắc đưa nhân lực Việt vươn ra biển lớn. Chúng tôi kết nối bạn với các tập đoàn
+            đa quốc gia uy tín, đảm bảo lộ trình thăng tiến và định cư bền vững tại các thị trường phát triển nhất.
           </p>
         </div>
 
@@ -96,24 +95,24 @@
           <div class="service-text">
             <div class="service-badge">
               <span class="material-icons">translate</span>
-              Đào tạo ngôn ngữ
+              Đào tạo & Định hướng
             </div>
 
-            <h3>Kết nối đào tạo tiếng Đức chuẩn Châu Âu</h3>
+            <h3>Đào tạo Ngôn ngữ chuẩn Quốc tế</h3>
             <p class="service-intro">
-              Xây dựng nền tảng ngôn ngữ vững chắc giúp bạn tự tin hòa nhập cuộc sống tại Đức.
-              Chúng tôi liên kết với các đơn vị đào tạo hàng đầu để cung cấp lộ trình học tối ưu
-              từ con số 0 đến trình độ B1 trong thời gian ngắn nhất.
+              Xóa bỏ rào cản ngôn ngữ là bước đầu tiên để trở thành công dân toàn cầu.
+              Chúng tôi liên kết với các hệ thống đào tạo uy tín để cung cấp lộ trình học
+              ngoại ngữ cấp tốc, giúp bạn tự tin hòa nhập tại bất kỳ quốc gia nào.
             </p>
 
             <ul class="service-list">
               <li>
-                <span class="service-icon material-icons">menu_book</span>
+                <span class="service-icon material-icons">language</span>
                 <div>
-                  <strong>Tiếng Đức A1 - B1 & Giao tiếp</strong>
+                  <strong>Đào tạo Đa Ngôn ngữ & Giao tiếp</strong>
                   <p>
-                    Chương trình học bám sát khung tham chiếu Châu Âu, chú trọng kỹ năng
-                    nghe - nói để phục vụ phỏng vấn và làm việc thực tế.
+                    Chương trình bám sát khung tham chiếu Quốc tế (CEFR, JLPT...),
+                    chú trọng phản xạ nghe - nói để phục vụ phỏng vấn và công việc thực tế.
                   </p>
                 </div>
               </li>
@@ -122,15 +121,15 @@
                 <div>
                   <strong>Lớp Cấp tốc & Bán trú</strong>
                   <p>
-                    Mô hình học tập trung cường độ cao giúp rút ngắn thời gian đào tạo,
-                    hỗ trợ người lao động sớm đủ điều kiện xuất cảnh.
+                    Mô hình học tập trung cường độ cao giúp rút ngắn thời gian,
+                    hỗ trợ người lao động nhanh chóng đủ điều kiện xuất cảnh.
                   </p>
                 </div>
               </li>
               <li>
                 <span class="service-icon material-icons">verified</span>
                 <div>
-                  <strong>Luyện thi chứng chỉ Goethe/Telc</strong>
+                  <strong>Cam kết Chứng chỉ Quốc tế</strong>
                   <p>
                     Tổ chức thi thử và ôn luyện sát đề thi thật, cam kết hỗ trợ tối đa
                     để học viên đạt chứng chỉ ngôn ngữ (điều kiện bắt buộc xin Visa).
@@ -156,48 +155,48 @@
               Cung ứng nhân lực Quốc tế
             </div>
 
-            <h3>Cơ hội việc làm & Định cư tại Đức</h3>
+            <h3>Cơ hội Việc làm & Định cư Toàn cầu</h3>
             <p class="service-intro">
-              Chúng tôi là cầu nối trực tiếp giữa người lao động Việt Nam và các tập đoàn lớn
-              tại Đức. Cam kết mang đến những công việc thu nhập cao, môi trường làm việc
-              an toàn và lộ trình định cư rõ ràng.
+              SADAKA HR là bệ phóng vững chắc đưa người lao động Việt Nam tiếp cận các nền kinh tế
+              phát triển nhất thế giới (Đức, Úc, Canada...). Chúng tôi cam kết mang đến thu nhập đột phá
+              và lộ trình định cư bền vững cho bạn và gia đình.
             </p>
 
             <ul class="service-list">
               <li>
                 <span class="service-icon material-icons">business_center</span>
                 <div>
-                  <strong>Đơn hàng Đa dạng & Uy tín</strong>
+                  <strong>Đa dạng Thị trường & Ngành nghề</strong>
                   <p>
-                    Việc làm chính thức tại các nhà máy, siêu thị (Edeka, Wiesenhof...)
-                    với mức lương và phúc lợi chuẩn theo luật lao động Đức.
+                    Kết nối việc làm chính thức tại các Tập đoàn đa quốc gia với mức lương
+                    và chế độ đãi ngộ tuân thủ nghiêm ngặt theo luật lao động của nước sở tại.
                   </p>
                 </div>
               </li>
               <li>
-                <span class="service-icon material-icons">verified_user</span>
+                <span class="service-icon material-icons">gavel</span>
                 <div>
-                  <strong>Pháp lý minh bạch & Visa</strong>
+                  <strong>Pháp lý Di trú Toàn diện</strong>
                   <p>
-                    Đội ngũ luật sư di trú hỗ trợ xử lý hồ sơ trọn gói, tối ưu hóa tỷ lệ
-                    đậu Visa và giấy phép lao động trong thời gian ngắn nhất.
+                    Đội ngũ luật sư quốc tế hỗ trợ xử lý hồ sơ Visa trọn gói, đảm bảo tính
+                    hợp pháp và tỷ lệ đậu cao nhất cho từng thị trường mục tiêu.
                   </p>
                 </div>
               </li>
               <li>
                 <span class="service-icon material-icons">volunteer_activism</span>
                 <div>
-                  <strong>Đồng hành An cư & Hòa nhập</strong>
+                  <strong>Đồng hành & Hòa nhập Văn hóa</strong>
                   <p>
-                    Không chỉ đưa đi, chúng tôi hỗ trợ đón tại sân bay, tìm nhà ở,
-                    hướng dẫn hòa nhập và thủ tục bảo lãnh người thân đoàn tụ.
+                    Hỗ trợ toàn diện từ đưa đón sân bay, tìm nhà ở đến hướng dẫn văn hóa
+                    bản địa, giúp người lao động nhanh chóng ổn định cuộc sống tại xứ người.
                   </p>
                 </div>
               </li>
             </ul>
 
-            <button class="service-btn" onclick="window.location.href='./pages/recruit.html'">Xem danh sách đơn
-              hàng</button>
+            <button class="service-btn" onclick="window.location.href='./pages/recruit.html'">Khám phá cơ hội
+              ngay</button>
           </div>
 
           <div class="service-media">
@@ -212,20 +211,19 @@
           <div class="about-text">
             <p>
               <strong>
-                SADAKA HR định vị là đơn vị tiên phong cung ứng nguồn nhân lực chất lượng cao cho các tập đoàn hàng đầu
-                tại CHLB Đức, giải quyết bài toán thiếu hụt nhân sự quốc tế bằng sự chuyên nghiệp và tử tế.
+                SADAKA HR không đi theo lối mòn. Chúng tôi định vị mình là nhà kiến tạo cơ hội, tiên phong cung ứng nhân
+                lực chất lượng cao cho các 'gã khổng lồ' tại Đức (Edeka, Wiesenhof...). Chúng tôi giải quyết bài toán
+                nhân sự quốc tế không chỉ bằng nghiệp vụ sắc bén mà còn bằng sự Tử Tế trọn vẹn.
               </strong>
             </p>
             <p>
-              Sở hữu mạng lưới đối tác rộng khắp từ các trường đào tạo nghề đến các doanh nghiệp lớn (Edeka,
-              Wiesenhof...), chúng tôi kiến tạo nên một quy trình khép kín: Đào tạo - Tuyển dụng - Định cư. Chúng tôi
-              coi con người là tài sản quý giá nhất, và việc bảo vệ quyền lợi hợp pháp của người lao động là tôn chỉ
-              hoạt động bất di bất dịch.
+              Sở hữu quy trình All-in-One (Khép kín): Đào tạo thực chiến - Tuyển dụng minh bạch - Định cư bền vững,
+              SADAKA biến những hồ sơ khó nhất thành những tấm Visa cầm tay. Chúng tôi coi người lao động là di sản, là
+              tài sản quý giá nhất, nên việc bảo vệ quyền lợi của bạn là 'luật bất thành văn' tại đây.
             </p>
             <p>
-              Với bề dày kinh nghiệm xử lý hàng trăm bộ hồ sơ khó, SADAKA HR tự tin mang đến những giải pháp việc làm
-              thực tế, thu nhập cao và cơ hội định cư lâu dài. Dù bạn là lao động phổ thông hay nhân sự trình độ cao,
-              chúng tôi luôn có lộ trình phù hợp để giúp bạn tỏa sáng tại môi trường quốc tế.
+              Dù tuổi đời doanh nghiệp đang trên đà bứt phá, nhưng với kinh nghiệm xử lý thành công hàng trăm hồ sơ phức
+              tạp, SADAKA HR tự tin cam kết: Chúng tôi có lộ trình để bạn tỏa sáng, bất kể xuất phát điểm của bạn ở đâu.
             </p>
           </div>
 
@@ -234,21 +232,21 @@
               <div class="about-stat-number-wrap">
                 <span class="about-stat-number" data-target="5">0</span><span class="about-stat-suffix">+</span>
               </div>
-              <div class="about-stat-label">Năm kinh nghiệm</div>
+              <div class="about-stat-label">Năm Bứt Phá & Kinh Nghiệm</div>
             </div>
 
             <div class="about-stat">
               <div class="about-stat-number-wrap">
                 <span class="about-stat-number" data-target="100">0</span><span class="about-stat-suffix">+</span>
               </div>
-              <div class="about-stat-label">Khách hàng đã phục vụ</div>
+              <div class="about-stat-label">Giấc Mơ Đức Được Hiện Thực Hóa</div>
             </div>
 
             <div class="about-stat">
               <div class="about-stat-number-wrap">
                 <span class="about-stat-number" data-target="99">0</span><span class="about-stat-suffix">%</span>
               </div>
-              <div class="about-stat-label">Tỷ lệ hài lòng</div>
+              <div class="about-stat-label">Tỷ Lệ Đậu Visa & Hài Lòng</div>
             </div>
           </div>
         </section>
@@ -269,10 +267,10 @@
             <div class="why-icon">
               <span class="material-icons">task_alt</span>
             </div>
-            <h3>Chuyên môn đã được kiểm chứng</h3>
+            <h3>Chuyên môn thực chiến đã được kiểm chứng</h3>
             <p>
-              Hơn 5 năm kinh nghiệm cung cấp giải pháp nhân sự cho nhiều ngành
-              nghề và thị trường khác nhau.
+              Đối tác chiến lược của các tập đoàn Top 1 tại Đức (Edeka, Wiesenhof). Chúng tôi giải quyết bài toán việc
+              làm quốc tế bằng năng lực thực thi sắc bén và mạng lưới kết nối rộng khắp.
             </p>
           </article>
 
@@ -281,10 +279,10 @@
             <div class="why-icon">
               <span class="material-icons">workspace_premium</span>
             </div>
-            <h3>Đội ngũ chuyên gia được chứng nhận</h3>
+            <h3>Đội ngũ tinh hoa - Tận tâm phụng sự</h3>
             <p>
-              Đội ngũ của chúng tôi gồm các chuyên gia nhân sự được chứng nhận
-              và giảng viên ngôn ngữ được công nhận.
+              Quy tụ những chuyên gia nhân sự hàng đầu với tư duy "Lấy con người làm gốc". Sự am hiểu tường tận về văn
+              hóa và pháp lý Đức của chúng tôi chính là lợi thế cạnh tranh của bạn.
             </p>
           </article>
 
@@ -293,10 +291,10 @@
             <div class="why-icon">
               <span class="material-icons">group</span>
             </div>
-            <h3>Giải pháp cá nhân hóa</h3>
+            <h3>Giải pháp toàn diện & Tối ưu</h3>
             <p>
-              Giải pháp được thiết kế riêng, phù hợp với nhu cầu kinh doanh và
-              văn hóa doanh nghiệp của bạn.
+              Từ đào tạo ngôn ngữ cấp tốc đến hoàn thiện hồ sơ "thần tốc". Chúng tôi loại bỏ mọi quy trình rườm rà để
+              mang đến một giải pháp XKLĐ tinh gọn, tiết kiệm thời gian và chi phí nhất.
             </p>
           </article>
 
@@ -305,10 +303,10 @@
             <div class="why-icon">
               <span class="material-icons">trending_up</span>
             </div>
-            <h3>Kết quả đo lường được</h3>
+            <h3>Kết quả minh bạch - Giá trị thật</h3>
             <p>
-              Chiến lược dựa trên dữ liệu mang lại những cải thiện rõ rệt
-              trong hiệu suất làm việc của đội ngũ nhân sự.
+              Mọi cam kết đều được hiện thực hóa bằng văn bản. Chúng tôi đo lường thành công bằng sự hài lòng của khách
+              hàng và sự thịnh vượng của người lao động tại xứ người.
             </p>
           </article>
         </div>
@@ -324,25 +322,22 @@
             </div>
 
             <div class="strip-item">
-              <img src="./public/img/ThucTe_Duc_12.jpg" alt="Hoạt động Sadaka 2" />
+              <img src="./public/img/ThucTe_Duc_10.jpg" alt="Hoạt động Sadaka 2" />
               <div class="strip-overlay"></div>
             </div>
 
             <div class="strip-item">
-              <img src="https://images.unsplash.com/photo-1599946347371-68eb71b16afc?auto=format&fit=crop&w=800&q=80"
-                alt="Hoạt động Sadaka 3" />
+              <img src="./public/img/ThucTe_Duc_01.jpg" alt="Hoạt động Sadaka 3" />
               <div class="strip-overlay"></div>
             </div>
 
             <div class="strip-item">
-              <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=800&q=80"
-                alt="Hoạt động Sadaka 4" />
+              <img src="./public/img/ThucTe_Duc_02.jpg" alt="Hoạt động Sadaka 4" />
               <div class="strip-overlay"></div>
             </div>
 
             <div class="strip-item">
-              <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&w=800&q=80"
-                alt="Hoạt động Sadaka 5" />
+              <img src="./public/img/ThucTe_Duc_12.jpg" alt="Hoạt động Sadaka 5" />
               <div class="strip-overlay"></div>
             </div>
           </div>
