--- a/pages/about.html
+++ b/pages/about.html
@@ -17,8 +17,7 @@
         <div class="top-bar-header">
             <div class="marquee">
                 <span>
-                    Cơ hội việc làm và định cư tại Đức - SADAKA HR đồng hành cùng bạn -
-                    Hotline: 090 990 8353
+                    SADAKA HR: Kiến tạo sự nghiệp toàn cầu - Vững bước định cư tương lai. Hotline: (+84) 90 990 8353
                 </span>
             </div>
         </div>
@@ -76,30 +75,29 @@
             <!-- Section 1 -->
             <section class="content">
                 <div class="about-sadaka">
-                    <h2 class="about-title">Về SADAKA HR</h2>
+                    <h2 class="about-title">VỀ SADAKA HR - KIẾN TẠO SỰ NGHIỆP TOÀN CẦU</h2>
 
                     <div class="about-text">
                         <p>
                             <strong>
-                                Được thành lập với tầm nhìn chuyển đổi lĩnh vực quản trị nguồn
-                                nhân lực, SADAKA HR đã trở thành đối tác đáng tin cậy của các
-                                tổ chức trong việc phát triển và thu hút nhân tài xuất sắc.
+                                Trực thuộc Công ty Cổ Phần Sản Xuất Thương Mại XNK SADAKA, SADAKA HR không định vị mình
+                                là một đơn vị môi giới đơn thuần. Chúng tôi là Hệ sinh thái cung ứng nhân lực quốc tế
+                                chuyên nghiệp, hoạt động trên nền tảng pháp lý vững chắc thông qua việc liên kết chiến
+                                lược với các doanh nghiệp đầu ngành được Bộ Lao động - Thương binh và Xã hội cấp phép.
                             </strong>
                         </p>
                         <p>
-                            Đội ngũ chuyên gia tận tâm của chúng tôi sở hữu nhiều năm kinh
-                            nghiệm trong tư vấn nhân sự, đào tạo ngôn ngữ và tuyển dụng.
-                            Chúng tôi hiểu rằng con người là tài sản quý giá nhất của doanh
-                            nghiệp và luôn cam kết đồng hành để giúp bạn phát huy tối đa
-                            tiềm năng của họ.
+                            Tại SADAKA HR, chúng tôi thay đổi cuộc chơi bằng tư duy khác biệt: 'Không đưa người đi bằng
+                            mọi giá, mà đưa người đi để tạo ra giá trị.' Đội ngũ chuyên gia của chúng tôi sở hữu sự sắc
+                            bén về thị trường và sự thấu hiểu sâu sắc về con người. Chúng tôi không chỉ tìm kiếm việc
+                            làm, chúng tôi hoạch định lộ trình phát triển bền vững, biến nguồn nhân lực Việt Nam trở
+                            thành những 'công dân toàn cầu' với tư duy và thu nhập đột phá.
                         </p>
                         <p>
-                            Với định hướng lấy khách hàng làm trung tâm và bề dày thành tích
-                            trong nhiều lĩnh vực, chúng tôi mang đến những giải pháp tạo ra
-                            kết quả kinh doanh thực sự. Từ các tập đoàn đa quốc gia đến
-                            những doanh nghiệp khởi nghiệp, SADAKA HR luôn linh hoạt điều
-                            chỉnh dịch vụ để đáp ứng đúng những thách thức riêng biệt của
-                            bạn.
+                            Với tư duy quản trị nhân sự hiện đại và đội ngũ chuyên gia giàu kinh nghiệm thực chiến,
+                            SADAKA HR chuyển đổi mô hình XKLĐ truyền thống sang mô hình 'Phát triển nhân tài quốc tế'.
+                            Chúng tôi lấy sự Tận tâm làm gốc rễ, lấy sự Sắc bén trong tư vấn làm công cụ, cam kết đồng
+                            hành cùng người lao động và đối tác để kiến tạo những giá trị kinh tế thực sự và bền vững.
                         </p>
                     </div>
 
@@ -116,28 +114,28 @@
                 </div>
 
                 <div class="about-sadaka">
-                    <h2 class="about-title">Tầm nhìn của SADAKA HR</h2>
+                    <h2 class="about-title">TẦM NHÌN: KIẾN TẠO HỆ SINH THÁI NHÂN LỰC TOÀN CẦU</h2>
 
                     <div class="about-text">
                         <p>
                             <strong>
-                                SADAKA HR từng bước xây dựng sự thành công và vị thế trong lĩnh vực Tư vấn
-                                và Xuất khẩu lao động sang các thị trường lớn tại Châu Âu.
+                                SADAKA HR không chỉ dừng lại ở vai trò một đơn vị cung ứng nhân sự. Chúng tôi định vị
+                                mình là nhà kiến tạo Hệ sinh thái nhân lực chất lượng cao, nơi khát vọng vươn ra biển
+                                lớn của người lao động Việt được hiện thực hóa bằng lộ trình bài bản: Giỏi tay nghề -
+                                Vững ngoại ngữ - Tự tin hội nhập.
                             </strong>
                         </p>
                         <p>
-                            SADAKA HR từng bước xây dựng sự thành công và vị thế trong lĩnh vực Tư vấn và Xuất khẩu lao
-                            động sang các thị trường lớn tại Châu Âu bằng uy tín, chất lượng ứng viên và sự đồng hành
-                            trọn vẹn với người lao động. Chúng tôi không chỉ hỗ trợ thủ tục, hồ sơ mà còn chú trọng đào
-                            tạo ngoại ngữ, kỹ năng và định hướng nghề nghiệp để mỗi ứng viên tự tin hội nhập, làm việc
-                            lâu dài tại môi trường quốc tế.
+                            Khác biệt với tư duy xuất khẩu lao động truyền thống, SADAKA lấy Chất lượng và Sự tử tế làm
+                            kim chỉ nam. Chúng tôi không đưa người đi bằng mọi giá, mà tập trung chuẩn hóa năng lực từ
+                            gốc (ngôn ngữ, kỹ năng, văn hóa) để đảm bảo mỗi ứng viên là một đại sứ nhân lực uy tín tại
+                            thị trường quốc tế.
                         </p>
                         <p>
-                            Trong tầm nhìn tương lai, SADAKA HR hướng đến trở thành đơn vị hàng đầu cung cấp giải pháp
-                            nguồn nhân lực chất lượng cao cho thị trường châu Âu, mở rộng mạng lưới đối tác và đa dạng
-                            ngành nghề tuyển dụng. Chúng tôi cam kết ứng dụng công nghệ trong quản lý hồ sơ, tư vấn và
-                            kết nối ứng viên – nhà tuyển dụng, đảm bảo minh bạch – hiệu quả, đồng thời luôn đặt quyền
-                            lợi và sự phát triển bền vững của người lao động Việt Nam làm trọng tâm.
+                            Trong kỷ nguyên mới, SADAKA HR cam kết tiên phong số hóa quy trình tuyển dụng, kết nối minh
+                            bạch giữa Ứng viên và Doanh nghiệp. Tầm nhìn của chúng tôi là trở thành Top 1 thị phần tại
+                            các thị trường khó tính như Châu Âu, đồng thời đặt nền móng vững chắc cho sự phát triển
+                            thịnh vượng của cộng đồng lao động Việt Nam ở nước ngoài.
                         </p>
                     </div>
                 </div>
@@ -145,20 +143,21 @@
             <!-- Section 3 -->
             <section class="content">
                 <div class="about-sadaka">
-                    <h2 class="about-title">Sứ mệnh của SADAKA HR</h2>
+                    <h2 class="about-title">SỨ MỆNH: KHAI MỞ CƠ HỘI - VỮNG BƯỚC TƯƠNG LAI</h2>
 
                     <div class="about-text">
                         <p>
                             <strong>
-                                Sứ mệnh của SADAKA HR là trở thành cầu nối tin cậy giữa người lao động Việt Nam và các
-                                doanh nghiệp quốc tế, mang đến cơ hội việc làm bền vững, thu nhập tốt và hành trình phát
-                                triển sự nghiệp vững chắc tại châu Âu.
+                                Sứ mệnh của SADAKA HR là trở thành cầu nối không biên giới, đưa nguồn nhân lực Việt Nam
+                                tiếp cận những cơ hội nghề nghiệp đẳng cấp tại các thị trường phát triển trên thế giới.
                             </strong>
                         </p>
                         <p>
-                            Sứ mệnh của SADAKA HR là trở thành cầu nối tin cậy giữa người lao động Việt Nam và các doanh
-                            nghiệp quốc tế, đặc biệt tại châu Âu. Chúng tôi mang đến cơ hội việc làm bền vững, thu nhập
-                            tốt và hỗ trợ ứng viên từ khâu tư vấn, hồ sơ đến đào tạo ngoại ngữ – kỹ năng.
+                            Chúng tôi không chỉ trao đi cơ hội việc làm thu nhập cao, mà còn kiến tạo một lộ trình phát
+                            triển toàn diện: Từ đào tạo ngôn ngữ, kỹ năng đến hỗ trợ an cư lạc nghiệp. Mọi hoạt động của
+                            SADAKA đều xoay quanh tôn chỉ Minh bạch - Chuyên nghiệp - Tử tế, đảm bảo quyền lợi tối
+                            thượng cho người lao động, giúp họ tự tin khẳng định bản lĩnh và trí tuệ Việt Nam trước bạn
+                            bè quốc tế.
                         </p>
                         <p>
                             Trong mọi hoạt động, SADAKA HR luôn đặt quyền lợi và tương lai của người lao động lên hàng
@@ -194,7 +193,7 @@
                                 thông tin trung thực, tuân thủ pháp luật để bảo vệ tối đa quyền lợi hợp pháp của người
                                 lao động trên thị trường quốc tế.</p>
                         </div>
-                        <img src="../assets/img/Slider_1.jpg" alt="Giá trị thứ 1">
+                        <img src="../public/img/ThucTe_Duc_11.jpg" alt="Giá trị thứ 1">
                     </div>
                     <!-- core value 2 -->
                     <div class="core-value">
@@ -203,9 +202,9 @@
                             <p>Sở hữu đội ngũ chuyên gia tận tâm với nhiều năm kinh nghiệm, chúng tôi cung cấp giải pháp
                                 nhân sự toàn diện từ tuyển dụng đến đào tạo ngôn ngữ và kỹ năng. SADAKA HR cam kết nâng
                                 cao chất lượng nguồn nhân lực Việt, đáp ứng những tiêu chuẩn khắt khe nhất của các tập
-                                đoàn đa quốc gia tại Châu Âu.</p>
+                                đoàn đa quốc gia phát triển trên thế giới.</p>
                         </div>
-                        <img src="../assets/img/Slider_1.jpg" alt="Giá trị thứ 2">
+                        <img src="../public/img/ThucTe_1.jpg" alt="Giá trị thứ 2">
                     </div>
                     <!-- core value 3 -->
                     <div class="core-value">
@@ -216,7 +215,7 @@
                                 trách nhiệm và tương lai bền vững của người lao động làm trọng tâm, giúp bạn tự tin xây
                                 dựng sự nghiệp vững chắc.</p>
                         </div>
-                        <img src="../assets/img/Slider_1.jpg" alt="Giá trị thứ 3">
+                        <img src="../public/img/ThucTe_Duc_10.jpg" alt="Giá trị thứ 3">
                     </div>
                 </div>
             </section>
@@ -226,7 +225,7 @@
                 <div class="key-figure-text">
                     <h1>Số liệu nổi bật</h1>
                     <p>
-                        SADAKA HR luôn giữ vị thế cao trong lĩnh vực Tư vấn xuất khẩu lao động sang Đức.
+                        SADAKA HR luôn giữ vị thế cao trong lĩnh vực Tư vấn xuất khẩu lao động Quốc tế.
                         Với những con số ấn tượng cũng như đội ngũ hổ trợ tư vấn nhiệt tình,
                         chúng tôi luôn từng bước phát triển và đổi mới không ngừng.
                     </p>
@@ -236,21 +235,21 @@
                         <div class="about-stat-number-wrap">
                             <span class="about-stat-number">5</span><span class="about-stat-suffix">+</span>
                         </div>
-                        <div class="about-stat-label">Năm kinh nghiệm</div>
+                        <div class="about-stat-label">Năm Bứt Phá & Kinh Nghiệm</div>
                     </div>
 
                     <div class="about-stat">
                         <div class="about-stat-number-wrap">
                             <span class="about-stat-number">100</span><span class="about-stat-suffix">+</span>
                         </div>
-                        <div class="about-stat-label">Khách hàng đã phục vụ</div>
+                        <div class="about-stat-label">Giấc Mơ Đức Được Hiện Thực Hóa</div>
                     </div>
 
                     <div class="about-stat">
                         <div class="about-stat-number-wrap">
                             <span class="about-stat-number">99</span><span class="about-stat-suffix">%</span>
                         </div>
-                        <div class="about-stat-label">Tỷ lệ hài lòng</div>
+                        <div class="about-stat-label">Tỷ Lệ Đậu Visa & Hài Lòng</div>
                     </div>
                 </div>
             </section>
@@ -263,7 +262,7 @@
                     <div class="footer-col footer-brand">
                         <div class="footer-logo">
                             <div class="footer-logo-icon">
-                                <a href="#" class="logo-link">
+                                <a href="../index.html" class="logo-link">
                                     <div class="logo">
                                         <img src="../assets/img/Logo_SADAKA.jpg" alt="SADAKA HR Logo" />
                                     </div>
