--- a/pages/blog.html
+++ b/pages/blog.html
@@ -17,8 +17,7 @@
         <div class="top-bar-header">
             <div class="marquee">
                 <span>
-                    Cơ hội việc làm và định cư tại Đức - SADAKA HR đồng hành cùng bạn -
-                    Hotline: 090 990 8353
+                    SADAKA HR: Kiến tạo sự nghiệp toàn cầu - Vững bước định cư tương lai. Hotline: (+84) 90 990 8353
                 </span>
             </div>
         </div>
@@ -71,11 +70,11 @@
                     <h1>
                         TIN TỨC VÀ NHỮNG CHIA SẼ THỰC TẾ CỦA NGƯỜI LAO ĐỘNG TẠI ĐỨC
                     </h1>
-                    <a class="cta-btn" href="#job-info">Tìm hiểu thêm</a>
+                    <a class="cta-btn" href="#blog-info">Tìm hiểu thêm</a>
                 </div>
             </section>
             <!-- Content section -->
-            <section class="block-blog">
+            <section class="block-blog" id="blog-info">
                 <section class="blog-list-section">
                 </section>
             </section>
@@ -87,7 +86,7 @@
                     <div class="footer-col footer-brand">
                         <div class="footer-logo">
                             <div class="footer-logo-icon">
-                                <a href="#" class="logo-link">
+                                <a href="../index.html" class="logo-link">
                                     <div class="logo">
                                         <img src="../assets/img/Logo_SADAKA.jpg" alt="SADAKA HR Logo" />
                                     </div>
