--- a/pages/recruit.html
+++ b/pages/recruit.html
@@ -17,8 +17,7 @@
         <div class="top-bar-header">
             <div class="marquee">
                 <span>
-                    Cơ hội việc làm và định cư tại Đức - SADAKA HR đồng hành cùng bạn -
-                    Hotline: 090 990 8353
+                    SADAKA HR: Kiến tạo sự nghiệp toàn cầu - Vững bước định cư tương lai. Hotline: (+84) 90 990 8353
                 </span>
             </div>
         </div>
@@ -71,7 +70,7 @@
 
                 <div class="slogan" id="recruit-slogan">
                     <h1>
-                        CƠ HỘI VIỆC LÀM HẤP DẪN TẠI ĐỨC.
+                        KIẾN TẠO SỰ NGHIỆP VỮNG CHẮC TẠI NƯỚC NGOÀI
                     </h1>
 
                     <a class="cta-btn" href="./contact.html">Nhận thông tin chuyên sâu</a>
@@ -93,7 +92,7 @@
                     <div class="footer-col footer-brand">
                         <div class="footer-logo">
                             <div class="footer-logo-icon">
-                                <a href="#" class="logo-link">
+                                <a href="../index.html" class="logo-link">
                                     <div class="logo">
                                         <img src="../assets/img/Logo_SADAKA.jpg" alt="SADAKA HR Logo" />
                                     </div>
