--- a/pages/training.html
+++ b/pages/training.html
@@ -17,8 +17,7 @@
         <div class="top-bar-header">
             <div class="marquee">
                 <span>
-                    Cơ hội việc làm và định cư tại Đức - SADAKA HR đồng hành cùng bạn -
-                    Hotline: 090 990 8353
+                    SADAKA HR: Kiến tạo sự nghiệp toàn cầu - Vững bước định cư tương lai. Hotline: (+84) 90 990 8353
                 </span>
             </div>
         </div>
@@ -74,8 +73,7 @@
                         GIẢI PHÁP NGÔN NGỮ TOÀN DIỆN CHO LAO ĐỘNG VIỆT.
                     </h1>
 
-                    <a class="cta-btn" href="./contact.html">Nhận thông tin chuyên
-                        sâu</a>
+                    <a class="cta-btn" href="./contact.html">Tư vấn miễn phí</a>
                 </div>
             </section>
             <!-- Content 01 -->
@@ -92,7 +90,7 @@
                         </p>
                         <p>
                             Phương châm hoạt động của chúng tôi là "Chọn lọc tinh hoa". Chúng tôi chỉ liên kết với những
-                            trung tâm ngôn ngữ có giáo trình chuẩn Châu Âu và đội ngũ giảng viên giàu kinh nghiệm. Mọi
+                            trung tâm ngôn ngữ có giáo trình chuẩn Quốc tế và đội ngũ giảng viên giàu kinh nghiệm. Mọi
                             đối tác đều phải trải qua quy trình thẩm định khắt khe về tỷ lệ đỗ chứng chỉ trước khi được
                             chúng tôi giới thiệu.
                         </p>
@@ -100,40 +98,42 @@
                             Hơn cả một người kết nối, SADAKA đóng vai trò là người giám sát độc lập. Chúng tôi theo dõi
                             sát sao tiến độ học tập của từng ứng viên hàng tuần, đảm bảo rằng mỗi đồng học phí và thời
                             gian bạn bỏ ra đều mang lại giá trị thực tế, giúp bạn không bị "hổng" kiến thức khi bước
-                            chân sang Đức.
+                            chân ra thế giới.
                         </p>
                     </div>
 
                 </div>
 
                 <div class="image-training">
-                    <img src="../public/img/Learn_Germany.jpg" alt="Ảnh công ty SADAKA HR">
+                    <img src="../public/img/ThucTe_05.jpg" alt="Ảnh công ty SADAKA HR">
                 </div>
             </section>
             <!-- Content 02 -->
             <section class="content">
                 <div class="image-training">
-                    <img src="../assets/img/Germany.jpg" alt="Ảnh công ty SADAKA HR">
+                    <img src="../public/img/ThucTe_06.jpg" alt="Ảnh công ty SADAKA HR">
                 </div>
                 <div class="about-sadaka">
-                    <h2 class="about-title">Mục tiêu: "Xóa bỏ rào cản ngôn ngữ - Mở lối đến Châu Âu"</h2>
+                    <h2 class="about-title">Mục tiêu: "Làm chủ Ngôn ngữ - Mở lối Tương lai Toàn cầu"</h2>
 
                     <div class="about-text">
                         <p>
                             <strong>
-                                Mục tiêu tối thượng của chúng tôi là xóa bỏ rào cản ngôn ngữ, biến tiếng Đức từ một "nỗi
-                                sợ" thành công cụ sắc bén nhất giúp người lao động Việt tự tin hội nhập.
+                                Mục tiêu tối thượng của chúng tôi là biến ngoại ngữ từ một "rào cản" thành "vũ khí" sắc
+                                bén nhất, giúp người lao động Việt Nam tự tin hội nhập và trở thành những công dân toàn
+                                cầu thực thụ.
                             </strong>
                         </p>
                         <p>
-                            Chúng tôi đặt mục tiêu 100% ứng viên thông qua hệ thống đối tác của SADAKA đều đạt trình độ
-                            A2/B1 đúng thời hạn cam kết. Việc rút ngắn thời gian đào tạo nhưng vẫn đảm bảo nền tảng vững
-                            chắc là ưu tiên hàng đầu để giúp người lao động sớm xuất cảnh và có thu nhập ổn định.
+                            Chúng tôi đặt mục tiêu 100% ứng viên qua hệ thống của SADAKA đều đạt chuẩn năng lực ngôn ngữ
+                            (A2/B1/IELTS...) đúng lộ trình cam kết. Việc tối ưu hóa thời gian đào tạo nhưng vẫn đảm bảo
+                            nền tảng vững chắc là ưu tiên hàng đầu để giúp bạn sớm xuất cảnh và có thu nhập ổn định.
                         </p>
                         <p>
-                            Về dài hạn, chúng tôi xây dựng một lộ trình khép kín: Tư vấn - Đào tạo - Xuất cảnh. Từ lúc
-                            bạn chưa biết gì cho đến khi cầm tấm bằng trên tay, mọi bước đi đều có sự đồng hành và đôn
-                            đốc từ SADAKA, giúp con đường đến nước Đức của bạn trở nên bằng phẳng và an tâm nhất.
+                            Về dài hạn, chúng tôi kiến tạo một quy trình khép kín: Tư vấn - Đào tạo - Xuất cảnh. Từ lúc
+                            bạn chưa biết gì cho đến khi cầm tấm vé thông hành ra thế giới, mọi bước đi đều có sự đồng
+                            hành và giám sát từ SADAKA, giúp con đường vươn ra biển lớn của bạn trở nên bằng phẳng và an
+                            tâm tuyệt đối.
                         </p>
                     </div>
 
@@ -147,30 +147,30 @@
                     <div class="steps-container">
                         <div class="step-item">
                             <div class="step-icon">01</div>
-                            <h3>Đánh giá & Xếp lớp</h3>
-                            <p>Kiểm tra năng lực, tư vấn lộ trình học cấp tốc hay tiêu chuẩn phù hợp với từng cá nhân.
-                            </p>
+                            <h3>Tư vấn & Định hướng Lộ trình</h3>
+                            <p>Thẩm định năng lực đầu vào, xây dựng lộ trình học tập và chọn thị trường mục tiêu (Đức,
+                                Úc, Canada...) phù hợp nhất với tài chính của bạn.</p>
                         </div>
 
                         <div class="step-item">
                             <div class="step-icon">02</div>
-                            <h3>Đào tạo tại đối tác</h3>
-                            <p>Học tập tại các trung tâm top đầu với giáo trình chuẩn Châu Âu dưới sự giám sát của
-                                Sadaka.</p>
+                            <h3>Đào tạo Ngôn ngữ Chuẩn Quốc tế</h3>
+                            <p>Học tập tại hệ thống đối tác top đầu. SADAKA giám sát chặt chẽ tiến độ để đảm bảo bạn đạt
+                                năng lực ngoại ngữ thực tế, không học đối phó.</p>
                         </div>
 
                         <div class="step-item">
                             <div class="step-icon">03</div>
-                            <h3>Xử lý hồ sơ song song</h3>
-                            <p>Trong khi bạn học, Sadaka tiến hành hoàn thiện hồ sơ xin việc, thẩm định bằng cấp và
-                                visa.</p>
+                            <h3>Xử lý Hồ sơ Pháp lý Song song</h3>
+                            <p>Tối ưu hóa thời gian chờ: SADAKA tiến hành xử lý hồ sơ, dịch thuật và xin thẩm định văn
+                                bằng ngay trong thời gian bạn đang học ngoại ngữ.</p>
                         </div>
 
                         <div class="step-item">
                             <div class="step-icon">04</div>
-                            <h3>Luyện thi & Xuất cảnh</h3>
-                            <p>Luyện đề sát sườn, thi lấy chứng chỉ B1 và tham gia khóa đào tạo văn hóa hội nhập trước
-                                khi bay.</p>
+                            <h3>Cấp Visa & Đào tạo Hội nhập</h3>
+                            <p>Hỗ trợ thi đạt chứng chỉ ngôn ngữ, trang bị kỹ năng văn hóa bản địa (Soft-skills) để bạn
+                                tự tin hòa nhập cuộc sống mới ngay khi cất cánh.</p>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                     <div class="footer-col footer-brand">
                         <div class="footer-logo">
                             <div class="footer-logo-icon">
-                                <a href="#" class="logo-link">
+                                <a href="../index.html" class="logo-link">
                                     <div class="logo">
                                         <img src="../assets/img/Logo_SADAKA.jpg" alt="SADAKA HR Logo" />
                                     </div>
