--- a/pages/blog_detail.html
+++ b/pages/blog_detail.html
@@ -17,8 +17,7 @@
         <div class="top-bar-header">
             <div class="marquee">
                 <span>
-                    Cơ hội việc làm và định cư tại Đức - SADAKA HR đồng hành cùng bạn -
-                    Hotline: 090 990 8353
+                    SADAKA HR: Kiến tạo sự nghiệp toàn cầu - Vững bước định cư tương lai. Hotline: (+84) 90 990 8353
                 </span>
             </div>
         </div>
@@ -155,7 +154,7 @@
                     <div class="footer-col footer-brand">
                         <div class="footer-logo">
                             <div class="footer-logo-icon">
-                                <a href="#" class="logo-link">
+                                <a href="../index.html" class="logo-link">
                                     <div class="logo">
                                         <img src="../assets/img/Logo_SADAKA.jpg" alt="SADAKA HR Logo" />
                                     </div>
